# ZhiruiSHEN-VLN

./: README.en.md  README.md  Requirement.md  reset.md  todo.md
data/: node3_experiment_log_20260407_202902.txt  warehouse_map.yaml
install/: local_setup.sh  setup.sh
install/vln_nav2_bridge/lib/vln_nav2_bridge/: vln_node_local
install/vln_nav2_bridge/share/vln_nav2_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
logs/: 2026-03-12.md  2026-03-13.md  2026-04-11.md
src/: auto_test_node3.py
src/issaac_envs/: house.usd  my_ros2_warehouse.usd
src/vln_inference/: run_inference_cli.py  test_inference.py
src/vln_nav2_bridge/: package.xml  setup.cfg  setup.py
src/vln_nav2_bridge/launch/: vln_nav2_bridge_local.launch.py
src/vln_nav2_bridge/vln_nav2_bridge/: __init__.py  api_handler.py  qwen_model_wrapper.py  text_to_pose_converter.py  vln_node_local.py
