<?xml version="1.0"?>
<package format="3">
  <name>vln_nav2_bridge</name>
  <version>0.1.0</version>
  <description>Local VLN to Nav2 bridge node for Node 5.</description>
  <maintainer email="bluepoisons@example.com">bluepoisons</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-pil</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
